--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="bg_light">#FAFAFA</color>
     <color name="colorPrimary">#367FA9</color>
     <color name="colorPrimaryDark">#1D6792</color>
     <color name="colorAccent">#FF4081</color>
