set up crashlytics

--- a/app/src/main/res/menu/menu_debug.xml
+++ b/app/src/main/res/menu/menu_debug.xml
@@ -6,4 +6,9 @@
         android:id="@+id/debug_reset"
         android:title="Reset URL"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/crash"
+        android:title="Crash!"
+        app:showAsAction="never" />
 </menu>
